# chemcreator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  rust.yml
src/: algorithm.rs  chain.rs  grid.rs  groups.rs  gui.rs  input.rs  macros.rs  main.rs  molecule.rs  naming.rs  numerics.rs  pointer.rs  spatial.rs  validation.rs
