[package]
name = "chemcreator"
version = "1.3.0"
description = "A text-based tool for identifying organic molecules."
authors = ["Gavin Tran"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/pumken/chemcreator"

[dependencies]
ruscii = "0.3.2"
thiserror = "1.0.38"
